two apps v.2 added util class with connection to Redis